more responsive spacing fixes

--- a/source/stylesheets/_variables.sass
+++ b/source/stylesheets/_variables.sass
@@ -14,6 +14,7 @@ $error-text: #{"{{ theme.error_text_color }}"}
 $primary-font: #{"{{ theme.primary_font | font_family }}"}
 $secondary-font: #{"{{ theme.secondary_font | font_family }}"}
 
+$break-extra-large: 1500px
 $break-large: 1200px
 $break-medium: 1023px
 $break-small: 767px
