--- a/source/stylesheets/product.sass
+++ b/source/stylesheets/product.sass
@@ -121,10 +121,12 @@
   padding: 0 7vw 200px
   width: 100%
   
+  @media screen and (max-width: $break-medium)
+    margin-top: 60px
+  
   @media screen and (max-width: $break-small)
     font-size: 18px
     line-height: 32px
-    margin-top: 60px
     padding-bottom: 64px
     position: relative
     top: auto
